[API] Fixed getUserProfile method to include 403 error status, added ban endpoint, [BACKEND] Support to list banned users, [FRONTEND] Fixes, modal view component
